=========
Changelog
=========

1.0b12 (unreleased)
===================

- Nothing changed yet.


1.0b11 (2013-10-17)
===================

- #12897: Use non-SSL pypi mirror for downloading virtualenv to fix tests
  failing randomly on machines that (for some reason) can't validate PyPI's
  certificate.

- #12911: Ensure that we can configure file owners when they don't 
  exist during configure phase yet.

- #12912: Fix untested and broken file ownership management.

- #12847: Clean up unicode handling for File and Content components and
  templating.

- #12910: Remote deployments failed when using bundles for transfers if no
  changes needed bundling.

- #12766: Allow bootstrapping a batou project in an existing directory to
  support migration from 0.2.

- #12283: Recognize files as 'is_template' by default. Auto-detect source files
  in the definition directory if they have the same basename. This is what you
  want in 99% of all cases. Explicitly stating either the 'content' or 'source'
  parameter disables auto-detection.

  Now you can write this:

  File('foo')

  and have `components/x/foo` recognized as the source file and handled as a
  template.

- Use ConfigParser instead of configobj which is effectively unmaintained
  (see https://twitter.com/voidspace/status/380699699042213889) and support
  lists separated by newlines in addition to commas.


1.0b10 (2013-09-27)
===================

- Package our own virtualenv instead of depending on the system-installed one.
  This should alleviate troubles due to old virtualenv versions that package
  ``distribute``, which causes conflicts with recent ``setuptools`` versions
  (#12874).

- Update supervisor version to 3.0.


1.0b9 (2013-08-22)
==================

- Update Package component so it ignores installed packages when installing.
  This way, we actually install setuptools even when distribute is installed.
  (Otherwise it's a no-op since distribute tells pip that setuptools is
  already satisfied).
